<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_label_for_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:text="@string/please_enter_your_city" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:hint="@string/your_city_here"
        android:background="@drawable/bg_edit_text"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_show_weather"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_label_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:text="@string/or" />

    <TextView
        android:id="@+id/tv_label_for_favourite_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:text="@string/choose_one_from_fav" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favourite_cities"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_placeholder_no_favourite_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:text="@string/you_do_not_have_favourite_cities_yet" />

</LinearLayout>